# FastAPI-The-Complete-Course

./: .env.example  .gitignore  README.md  pyproject.toml
course_scripts/TodoApp/: main.py
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 3f9e40cc2fc4_initial_commit.py
src/app/: app_models.py  books.py
src/database/: core.py  demo.db  models.py  utils.py
src/routers/: auth.py  utils.py
