[tool.poetry]
name = "fastapi-the-complete-course"
version = "0.1.0"
description = ""
authors = ["theycallmejeano"]
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^4.1.3"
cryptography = "^42.0.7"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
passlib = "^1.7.4"
pytest = "^8.2.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
aiofiles = "^23.2.1"
jinja2 = "^3.1.4"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
